-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.754 2010-06-24 19:12:06 guru Exp $
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2010-07-15	pwessel
	* GMT 4.5.3 finalized and released
-----------------------------------------------------------------------------------------

2010-06-24	pwessel
	* nearneighbor_func.c:	Did not handle periodic x input when -fg was used
	* grdmask_func.c:	Did not handle periodic x input when -fg was used
	* grdmask_func.c:	Did not handle periodic x input when -fg was used
	* psmask_func.c:	Did not handle periodic x input when -fg was used
	* surface_func.c:	Did not handle periodic x input when -fg was used

2010-06-24	jluis
	* grdview.c:		Check that topo and illumination file have the same size,
				otherwise it would crash.

2010-06-21	pwessel
	* job??.*, *.sh:	All uses of gridded files now use the extension .nc and not .grd

2010-06-16	pwessel
	* WDBII:		Based on feedback (and data) from Branislav Mikulas I have added some
				missing/mangled borders to the WDBII borders, level 1: Syria-Israel,
				Israel-Jordan, Moldova-Ukraine, and the Eritrea border with Ethiopia.

2010-06-06	pwessel
	* x2sys/x2sys_get.c:	Need -L+[<list>] so internal crossovers can be added.

2010-06-06	jluis
	* mgd77/mgd77convert.c:	Fix for the never ending troubles with the dll cross on Windows
	* x2sys/x2sys_list.c:	Implemented -S[+] to print info relevant to both cruises 

2010-05-31	pwessel
	* misc/kml2gmt.c:	Did not allow for optional attributes for tags <PlaceMark> etc.

2010-05-25	pwessel
	* x2sys/x2sys.c:	Need to include the "." when checking if a suffix is present.

2010-05-24	remko
	* gshhs-*.info:		Fink info files updated for GSHHS version 2.1

2010-05-22	pwessel
	* GSHHS:		Now version 2.1 which fixes the lack of river-lake metadata